# msgpackm

./: CMakeLists.txt  README.md  annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  msgpackm_8c_source.html  msgpackm_8h.html  msgpackm_8h__dep__incl.map  msgpackm_8h__dep__incl.md5  msgpackm_8h__incl.map  msgpackm_8h__incl.md5  msgpackm_8h_source.html  structmsgpack__formatter.html
.github/workflows/: doxy.yml  main.yml
inc/: msgpackm.h
search/: all_0.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  msgpackm.c
tests/: CMakeLists.txt  format-fixint.c  msgpackm-test.h  swap16.c
